@@ -39,6 +39,30 @@ class CXmlImportReaderTest extends PHPUnit_Framework_TestCase {
 				'<'.'?xml version="1.0"?'.'>'."\n".
 				'<zabbix_export version="1.0" date="09.01.10" time="14.23">'."\n".
 				'<hosts>'."\n".
+				'    <host host="Zabbix server"/>'."\n".
+				'    <host host="Zabbix server2"/>'."\n".
+				'</hosts>'."\n".
+				'</zabbix_export>',
+				[
+					'zabbix_export' => [
+						'version' => '1.0',
+						'date' => '09.01.10',
+						'time' => '14.23',
+						'hosts' => [
+							'host' => [
+								'host' => 'Zabbix server'
+							],
+							'host1' => [
+								'host' => 'Zabbix server2'
+							]
+						]
+					]
+				]
+			],
+			[
+				'<'.'?xml version="1.0"?'.'>'."\n".
+				'<zabbix_export version="1.0" date="09.01.10" time="14.23">'."\n".
+				'<hosts>'."\n".
 				'    <host host="Zabbix server">'."\n".
 				'        <status>0</status>'."\n".
 				'    </host>'."\n".
